--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -27,7 +27,7 @@ jobs:
             ${{ runner.os }}-node-
 
       - name: Install dependencies
-        run: npm install
+        run: npm install --ignore-scripts
 
       # This is required separately from yarn test because it generates the typechain definitions
       - name: Compile
@@ -65,7 +65,7 @@ jobs:
             ${{ runner.os }}-node-
 
       - name: Install dependencies
-        run: npm install
+        run: npm install --ignore-scripts
 
       # This is required separately from yarn test because it generates the typechain definitions
       - name: Compile
@@ -101,7 +101,7 @@ jobs:
             ${{ runner.os }}-node-
 
       - name: Install dependencies
-        run: npm install
+        run: npm install --ignore-scripts
 
       # This is required separately from yarn test because it generates the typechain definitions
       - name: Compile
@@ -137,7 +137,7 @@ jobs:
             ${{ runner.os }}-node-
 
       - name: Install dependencies
-        run: npm install
+        run: npm install --ignore-scripts
 
       # This is required separately from yarn test because it generates the typechain definitions
       - name: Compile
@@ -173,7 +173,7 @@ jobs:
             ${{ runner.os }}-node-
 
       - name: Install dependencies
-        run: npm install
+        run: npm install --ignore-scripts
 
       # This is required separately from yarn test because it generates the typechain definitions
       - name: Compile
@@ -209,7 +209,7 @@ jobs:
             ${{ runner.os }}-node-
 
       - name: Install dependencies
-        run: npm install
+        run: npm install --ignore-scripts
 
       # This is required separately from yarn test because it generates the typechain definitions
       - name: Compile
@@ -245,7 +245,7 @@ jobs:
             ${{ runner.os }}-node-
 
       - name: Install dependencies
-        run: npm install
+        run: npm install --ignore-scripts
 
       # This is required separately from yarn test because it generates the typechain definitions
       - name: Compile
@@ -281,7 +281,7 @@ jobs:
             ${{ runner.os }}-node-
 
       - name: Install dependencies
-        run: npm install
+        run: npm install --ignore-scripts
 
       # This is required separately from yarn test because it generates the typechain definitions
       - name: Compile
@@ -317,7 +317,7 @@ jobs:
             ${{ runner.os }}-node-
 
       - name: Install dependencies
-        run: npm install
+        run: npm install --ignore-scripts
 
       # This is required separately from yarn test because it generates the typechain definitions
       - name: Compile
@@ -353,7 +353,7 @@ jobs:
             ${{ runner.os }}-node-
 
       - name: Install dependencies
-        run: npm install
+        run: npm install --ignore-scripts
 
       # This is required separately from yarn test because it generates the typechain definitions
       - name: Compile
@@ -389,7 +389,7 @@ jobs:
             ${{ runner.os }}-node-
 
       - name: Install dependencies
-        run: npm install
+        run: npm install --ignore-scripts
 
       # This is required separately from yarn test because it generates the typechain definitions
       - name: Compile
@@ -426,7 +426,7 @@ jobs:
             ${{ runner.os }}-node-
 
       - name: Install dependencies
-        run: npm install
+        run: npm install --ignore-scripts
 
       # This is required separately from yarn test because it generates the typechain definitions
       - name: Compile
@@ -463,7 +463,7 @@ jobs:
             ${{ runner.os }}-node-
 
       - name: Install dependencies
-        run: npm install
+        run: npm install --ignore-scripts
 
       # This is required separately from yarn test because it generates the typechain definitions
       - name: Compile
@@ -500,7 +500,7 @@ jobs:
             ${{ runner.os }}-node-
 
       - name: Install dependencies
-        run: npm install
+        run: npm install --ignore-scripts
 
       # This is required separately from yarn test because it generates the typechain definitions
       - name: Compile
@@ -536,7 +536,7 @@ jobs:
             ${{ runner.os }}-node-
 
       - name: Install dependencies
-        run: npm install
+        run: npm install --ignore-scripts
 
       # This is required separately from yarn test because it generates the typechain definitions
       - name: Compile
@@ -573,7 +573,7 @@ jobs:
             ${{ runner.os }}-node-
 
       - name: Install dependencies
-        run: npm install
+        run: npm install --ignore-scripts
 
       # This is required separately from yarn test because it generates the typechain definitions
       - name: Compile
@@ -609,7 +609,7 @@ jobs:
             ${{ runner.os }}-node-
 
       - name: Install dependencies
-        run: npm install
+        run: npm install --ignore-scripts
 
       # This is required separately from yarn test because it generates the typechain definitions
       - name: Compile
@@ -645,7 +645,7 @@ jobs:
             ${{ runner.os }}-node-
 
       - name: Install dependencies
-        run: npm install
+        run: npm install --ignore-scripts
 
       # This is required separately from yarn test because it generates the typechain definitions
       - name: Compile
@@ -682,7 +682,7 @@ jobs:
             ${{ runner.os }}-node-
 
       - name: Install dependencies
-        run: npm install
+        run: npm install --ignore-scripts
 
       # This is required separately from yarn test because it generates the typechain definitions
       - name: Compile
@@ -718,7 +718,7 @@ jobs:
             ${{ runner.os }}-node-
 
       - name: Install dependencies
-        run: npm install
+        run: npm install --ignore-scripts
 
       # This is required separately from yarn test because it generates the typechain definitions
       - name: Compile
@@ -753,7 +753,7 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-node-
       - name: Install dependencies
-        run: npm install
+        run: npm install --ignore-scripts
 
       # This is required separately from yarn test because it generates the typechain definitions
       - name: Compile
@@ -788,7 +788,7 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-node-
       - name: Install dependencies
-        run: npm install
+        run: npm install --ignore-scripts
 
       # This is required separately from yarn test because it generates the typechain definitions
       - name: Compile
@@ -822,7 +822,7 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-node-
       - name: Install dependencies
-        run: npm install
+        run: npm install --ignore-scripts
 
       # This is required separately from yarn test because it generates the typechain definitions
       - name: Compile
@@ -858,7 +858,7 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-node-
       - name: Install dependencies
-        run: npm install
+        run: npm install --ignore-scripts
 
       # This is required separately from yarn test because it generates the typechain definitions
       - name: Compile
@@ -892,7 +892,7 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-node-
       - name: Install dependencies
-        run: npm install
+        run: npm install --ignore-scripts
 
       # This is required separately from yarn test because it generates the typechain definitions
       - name: Compile
@@ -926,7 +926,7 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-node-
       - name: Install dependencies
-        run: npm install
+        run: npm install --ignore-scripts
 
       # This is required separately from yarn test because it generates the typechain definitions
       - name: Compile
@@ -936,6 +936,40 @@ jobs:
         run: npm run integ-test  -- -t 'quote for other networks * soneium'
         env:
           JSON_RPC_PROVIDER_SONEIUM: ${{ secrets.JSON_RPC_PROVIDER_SONEIUM }}
+          TENDERLY_BASE_URL: ${{ secrets.TENDERLY_BASE_URL }}
+          TENDERLY_USER: ${{ secrets.TENDERLY_USER }}
+          TENDERLY_PROJECT: ${{ secrets.TENDERLY_PROJECT }}
+          TENDERLY_ACCESS_KEY: ${{ secrets.TENDERLY_ACCESS_KEY }}
+
+  integration-tests-quote-for-other-networks-xlayer:
+    name: Integration Tests - Quote For Other Networks XLayer
+    runs-on: ubuntu-latest
+
+    steps:
+      - uses: bullfrogsec/bullfrog@dcde5841b19b7ef693224207a7fdec67fce604db # v0.8.3
+      - uses: actions/checkout@50fbc622fc4ef5163becd7fab6573eac35f8462e # v1
+      - uses: actions/setup-node@f1f314fca9dfce2769ece7d933488f076716723e # v1
+        with:
+          node-version: 18.x
+          registry-url: https://registry.npmjs.org
+
+      - uses: actions/cache@6f8efc29b200d32929f49075959781ed54ec270c # v3
+        with:
+          path: ~/.npm
+          key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
+          restore-keys: |
+            ${{ runner.os }}-node-
+      - name: Install dependencies
+        run: npm install --ignore-scripts
+
+      # This is required separately from yarn test because it generates the typechain definitions
+      - name: Compile
+        run: npm run build
+
+      - name: Run Integration tests
+        run: npm run integ-test  -- -t 'quote for other networks * xlayer'
+        env:
+          JSON_RPC_PROVIDER_XLAYER: ${{ secrets.JSON_RPC_PROVIDER_XLAYER }}
           TENDERLY_BASE_URL: ${{ secrets.TENDERLY_BASE_URL }}
           TENDERLY_USER: ${{ secrets.TENDERLY_USER }}
           TENDERLY_PROJECT: ${{ secrets.TENDERLY_PROJECT }}
@@ -961,7 +995,7 @@ jobs:
             ${{ runner.os }}-node-
 
       - name: Install dependencies
-        run: npm install
+        run: npm install --ignore-scripts
 
       # This is required separately from yarn test because it generates the typechain definitions
       - name: Compile
